# Ts-pmo-

./: README.md
Lab2/Lab2/: Br.txt  Header.h  Pb.txt  Pl.txt  Source.cpp  St.txt  Wd.txt  deviations.txt  means.txt
Lab2/Lab2/x64/Debug/: Lab2.ilk  vc143.idb
Lab2/Lab2/x64/Debug/Lab2.tlog/: link.read.1.tlog
Lab3/: Lab3.sln
Lab3/Lab3/: Header.h  Horus.txt  Lab3.vcxproj  Lab3.vcxproj.filters  Maxx.txt  Sensitivity.txt  Source.cpp  Vert.txt
Lab3/Lab3/x64/Debug/: Lab3.exe.recipe  Lab3.ilk  vc143.idb
Lab3/Lab3/x64/Debug/Lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Pagani/: CMakeLists.txt
Pagani/Pagani/: CMakeLists.txt  Pagani.cpp
